# credit-risk-xai

./: LICENSE  Makefile  README.md  download_data.py  pyproject.toml
credit_risk_xai/: dataset.py  features.py  plots.py
data/processed/: X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
docs/: mkdocs.yml
docs/docs/: index.md
src/credit_risk_xai/: dataset.py
src/credit_risk_xai/modeling/: train.py
